--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,3 +1,134 @@
-body {
-  display: flex;
+@import 'vars';
+@import 'global';
+
+.header {
+  background-color: #eef1f3;
+  padding: 25px;
 }
+
+.header__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__logo {
+  align-items: center;
+  display: flex;
+    .header__logo-text {
+      font-weight: 700;
+      font-size: 30px;
+      color: #000;
+      margin-left: 6px;
+        span {
+          color: #0674ec;
+        }
+    }
+}
+
+.header__inner {
+  display: flex;
+  align-items: center;
+}
+
+.header__btn-text{
+  color:#ffffff;
+  background-color: #0674ec;
+  padding: 14px 19px 11px 18px;
+  font-size: 14px;
+  border-radius: 21px;
+}
+
+.header__icons {
+  margin: 0 51px;
+    .icon-sms {
+      margin: 0 32px ;
+    }
+}
+
+.header__bottom {
+  
+}
+
+.menu {
+  padding: 34px;
+
+}
+
+.nav {
+
+}
+
+.menu__list {
+  display: flex;
+    li + li{
+      margin-left: 34px;
+    }
+   a {
+     color: #333333;
+     font-size: 15px;
+     text-transform: uppercase;
+     font-weight: 500;
+   }
+}
+
+.search {
+  margin-left: auto;
+}
+
+.main {
+  background-color: #2447cb;
+  padding: 180px 0px 235px;
+}
+
+.title {
+  max-width: 965px;
+  text-transform: uppercase;
+  font-size: 60px;
+  font-weight: 700;
+  margin: 0 auto;
+  color: #f3f3f8;
+    span {
+      font-weight: 400;
+      display: block;
+      text-align: center;
+    }
+}
+
+.title__text {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+  color: #f3f3f8;
+  margin-top: 37px;
+}
+
+.title__link {
+  display: flex;
+  justify-content: center;
+  margin-top: 65px;
+    a{
+      border: 1px solid #fff;
+      color: #fff;
+      font-size: 16px;
+       font-weight: 400;
+       padding: 20px 30px 17px 30px;
+       border-radius: 30px;
+       transition:  all 0.5s;
+    }
+    a + a {
+      margin-left: 30px;
+    }
+}
+
+.title__link {
+    a:hover {
+      background-color: #fff;
+      color: #0674ec;
+    }
+}
+
+
+
+
+
